// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuggest is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props append 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiFormControlLayout__append"
            >
              Appended
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props isVirtualized 1`] = `
<EuiSuggest
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  isVirtualized={true}
  suggestions={
    Array [
      Object {
        "description": "Description",
        "label": "Field sample",
        "type": Object {
          "color": "tint4",
          "iconType": "kqlField",
        },
      },
      Object {
        "description": "Description",
        "label": "Value sample",
        "type": Object {
          "color": "tint0",
          "iconType": "kqlValue",
        },
      },
    ]
  }
>
  <EuiSelectable
    isPreFiltered={false}
    listProps={
      Object {
        "bordered": false,
        "isVirtualized": true,
        "onFocusBadge": false,
        "paddingSize": "none",
        "showIcons": false,
        "textWrap": "truncate",
      }
    }
    onChange={[Function]}
    options={
      Array [
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Field sample",
            "type": Object {
              "color": "tint4",
              "iconType": "kqlField",
            },
          },
          "label": "Field sample",
          "truncate": true,
        },
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Value sample",
            "type": Object {
              "color": "tint0",
              "iconType": "kqlValue",
            },
          },
          "label": "Value sample",
          "truncate": true,
        },
      ]
    }
    renderOption={[Function]}
    searchProps={
      Object {
        "append": undefined,
        "aria-describedby": "generated-id",
        "aria-label": "aria-label",
        "aria-labelledby": undefined,
        "className": "testClass1 testClass2",
        "data-test-subj": "test subject string",
        "fullWidth": true,
        "id": undefined,
        "isLoading": false,
        "onBlur": [Function],
        "onChange": [Function],
        "onFocus": [Function],
        "onInput": [Function],
      }
    }
    searchable={true}
    singleSelection={true}
  >
    <div
      className="euiSelectable"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <EuiInputPopover
        anchorPosition="downLeft"
        attachToAnchor={true}
        closePopover={[Function]}
        disableFocusTrap={true}
        display="block"
        fullWidth={true}
        input={
          <React.Fragment>
            <EuiI18n
              default="Filter options"
              token="euiSelectable.placeholderName"
            >
              [Function]
            </EuiI18n>
          </React.Fragment>
        }
        isOpen={false}
        panelPaddingSize="none"
        panelProps={
          Object {
            "aria-live": undefined,
            "aria-modal": false,
            "role": undefined,
          }
        }
        panelRef={[Function]}
      >
        <EuiPopover
          anchorPosition="downLeft"
          attachToAnchor={true}
          button={
            <EuiResizeObserver
              onResize={[Function]}
            >
              [Function]
            </EuiResizeObserver>
          }
          buttonRef={[Function]}
          closePopover={[Function]}
          css="unknown styles"
          display="block"
          isOpen={false}
          ownFocus={false}
          panelPaddingSize="none"
          panelProps={
            Object {
              "aria-live": undefined,
              "aria-modal": false,
              "role": undefined,
            }
          }
          panelRef={[Function]}
        >
          <Insertion
            cache={
              Object {
                "insert": [Function],
                "inserted": Object {
                  "192zz00-euiLoadingSpinner-m": true,
                  "1k1aqtq-EuiPopover": true,
                  "1sycd0p-euiPopover-EuiPopover-EuiInputPopover": true,
                  "6qkby-EuiInputPopover": true,
                  "animation-c24ia8": true,
                },
                "key": "css",
                "nonce": undefined,
                "registered": Object {
                  "css-6qkby-EuiInputPopover": ";label:EuiInputPopover;",
                },
                "sheet": StyleSheet {
                  "_alreadyInsertedOrderInsensitiveRule": true,
                  "_insertTag": [Function],
                  "before": null,
                  "container": <head>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-6qkby-EuiInputPopover{}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1k1aqtq-EuiPopover{display:block;}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>
                  </head>,
                  "ctr": 7,
                  "insertionPoint": undefined,
                  "isSpeedy": false,
                  "key": "css",
                  "nonce": undefined,
                  "prepend": undefined,
                  "tags": Array [
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-6qkby-EuiInputPopover{}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1k1aqtq-EuiPopover{display:block;}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>,
                  ],
                },
              }
            }
            isStringTag={false}
            serialized={
              Object {
                "map": undefined,
                "name": "6qkby-EuiInputPopover",
                "next": undefined,
                "styles": ";label:EuiInputPopover;",
                "toString": [Function],
              }
            }
          />
          <EuiPopover
            anchorPosition="downLeft"
            attachToAnchor={true}
            button={
              <EuiResizeObserver
                onResize={[Function]}
              >
                [Function]
              </EuiResizeObserver>
            }
            buttonRef={[Function]}
            className="euiInputPopover css-6qkby-EuiInputPopover"
            closePopover={[Function]}
            display="block"
            hasArrow={true}
            isOpen={false}
            ownFocus={false}
            panelPaddingSize="none"
            panelProps={
              Object {
                "aria-live": undefined,
                "aria-modal": false,
                "role": undefined,
              }
            }
            panelRef={[Function]}
          >
            <EuiOutsideClickDetector
              onOutsideClick={[Function]}
            >
              <div
                css="unknown styles"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <Insertion
                  cache={
                    Object {
                      "insert": [Function],
                      "inserted": Object {
                        "192zz00-euiLoadingSpinner-m": true,
                        "1k1aqtq-EuiPopover": true,
                        "1sycd0p-euiPopover-EuiPopover-EuiInputPopover": true,
                        "6qkby-EuiInputPopover": true,
                        "animation-c24ia8": true,
                      },
                      "key": "css",
                      "nonce": undefined,
                      "registered": Object {
                        "css-6qkby-EuiInputPopover": ";label:EuiInputPopover;",
                      },
                      "sheet": StyleSheet {
                        "_alreadyInsertedOrderInsensitiveRule": true,
                        "_insertTag": [Function],
                        "before": null,
                        "container": <head>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-6qkby-EuiInputPopover{}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1k1aqtq-EuiPopover{display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                        </head>,
                        "ctr": 7,
                        "insertionPoint": undefined,
                        "isSpeedy": false,
                        "key": "css",
                        "nonce": undefined,
                        "prepend": undefined,
                        "tags": Array [
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-6qkby-EuiInputPopover{}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1k1aqtq-EuiPopover{display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                        ],
                      },
                    }
                  }
                  isStringTag={true}
                  serialized={
                    Object {
                      "map": undefined,
                      "name": "1sycd0p-euiPopover-EuiPopover-EuiInputPopover",
                      "next": undefined,
                      "styles": "position:relative;vertical-align:middle;max-inline-size: 100%;;;label:euiPopover;;;display: block;label:EuiPopover;;;;label:EuiInputPopover;;",
                      "toString": [Function],
                    }
                  }
                />
                <div
                  className="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    css="unknown styles"
                  >
                    <Insertion
                      cache={
                        Object {
                          "insert": [Function],
                          "inserted": Object {
                            "192zz00-euiLoadingSpinner-m": true,
                            "1k1aqtq-EuiPopover": true,
                            "1sycd0p-euiPopover-EuiPopover-EuiInputPopover": true,
                            "6qkby-EuiInputPopover": true,
                            "animation-c24ia8": true,
                          },
                          "key": "css",
                          "nonce": undefined,
                          "registered": Object {
                            "css-6qkby-EuiInputPopover": ";label:EuiInputPopover;",
                          },
                          "sheet": StyleSheet {
                            "_alreadyInsertedOrderInsensitiveRule": true,
                            "_insertTag": [Function],
                            "before": null,
                            "container": <head>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-6qkby-EuiInputPopover{}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1k1aqtq-EuiPopover{display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                            </head>,
                            "ctr": 7,
                            "insertionPoint": undefined,
                            "isSpeedy": false,
                            "key": "css",
                            "nonce": undefined,
                            "prepend": undefined,
                            "tags": Array [
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-6qkby-EuiInputPopover{}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1k1aqtq-EuiPopover{display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                            ],
                          },
                        }
                      }
                      isStringTag={true}
                      serialized={
                        Object {
                          "map": undefined,
                          "name": "1k1aqtq-EuiPopover",
                          "next": undefined,
                          "styles": "display: block;label:EuiPopover;;;",
                          "toString": [Function],
                        }
                      }
                    />
                    <div
                      className="euiPopover__anchor css-1k1aqtq-EuiPopover"
                    >
                      <EuiResizeObserver
                        onResize={[Function]}
                      >
                        <div>
                          <EuiI18n
                            default="Filter options"
                            token="euiSelectable.placeholderName"
                          >
                            <EuiSelectableSearch
                              aria-activedescendant=""
                              aria-label="aria-label"
                              className="testClass1 testClass2"
                              data-test-subj="test subject string"
                              fullWidth={true}
                              inputRef={[Function]}
                              isLoading={false}
                              isPreFiltered={false}
                              key="listSearch"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              options={
                                Array [
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Field sample",
                                      "type": Object {
                                        "color": "tint4",
                                        "iconType": "kqlField",
                                      },
                                    },
                                    "label": "Field sample",
                                    "truncate": true,
                                  },
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Value sample",
                                      "type": Object {
                                        "color": "tint0",
                                        "iconType": "kqlValue",
                                      },
                                    },
                                    "label": "Value sample",
                                    "truncate": true,
                                  },
                                ]
                              }
                              placeholder="Filter options"
                              value=""
                            >
                              <EuiFieldSearch
                                aria-activedescendant=""
                                aria-haspopup="listbox"
                                aria-label="aria-label"
                                autoComplete="off"
                                className="euiSelectableSearch testClass1 testClass2"
                                compressed={false}
                                data-test-subj="test subject string"
                                fullWidth={true}
                                incremental={true}
                                inputRef={[Function]}
                                isClearable={true}
                                isLoading={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onInput={[Function]}
                                placeholder="Filter options"
                                value=""
                              >
                                <EuiFormControlLayout
                                  compressed={false}
                                  fullWidth={true}
                                  icon="search"
                                  isLoading={false}
                                >
                                  <div
                                    className="euiFormControlLayout euiFormControlLayout--fullWidth"
                                  >
                                    <div
                                      className="euiFormControlLayout__childrenWrapper"
                                    >
                                      <EuiValidatableControl>
                                        <input
                                          aria-activedescendant=""
                                          aria-haspopup="listbox"
                                          aria-label="aria-label"
                                          autoComplete="off"
                                          className="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                                          data-test-subj="test subject string"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          onInput={[Function]}
                                          onKeyUp={[Function]}
                                          placeholder="Filter options"
                                          type="search"
                                          value=""
                                        />
                                      </EuiValidatableControl>
                                      <EuiFormControlLayoutIcons
                                        compressed={false}
                                        icon="search"
                                        isLoading={false}
                                      >
                                        <div
                                          className="euiFormControlLayoutIcons"
                                        >
                                          <EuiFormControlLayoutCustomIcon
                                            size="m"
                                            type="search"
                                          >
                                            <span
                                              className="euiFormControlLayoutCustomIcon"
                                            >
                                              <EuiIcon
                                                aria-hidden="true"
                                                className="euiFormControlLayoutCustomIcon__icon"
                                                size="m"
                                                type="search"
                                              >
                                                <span
                                                  aria-hidden="true"
                                                  className="euiFormControlLayoutCustomIcon__icon"
                                                  data-euiicon-type="search"
                                                  size="m"
                                                />
                                              </EuiIcon>
                                            </span>
                                          </EuiFormControlLayoutCustomIcon>
                                        </div>
                                      </EuiFormControlLayoutIcons>
                                    </div>
                                  </div>
                                </EuiFormControlLayout>
                              </EuiFieldSearch>
                            </EuiSelectableSearch>
                          </EuiI18n>
                        </div>
                      </EuiResizeObserver>
                    </div>
                  </div>
                </div>
              </div>
            </EuiOutsideClickDetector>
          </EuiPopover>
        </EuiPopover>
      </EuiInputPopover>
    </div>
  </EuiSelectable>
  <EuiScreenReaderOnly>
    <p
      className="euiScreenReaderOnly"
      id="generated-id"
    >
      State: unchanged.
    </p>
  </EuiScreenReaderOnly>
</EuiSuggest>
`;

exports[`EuiSuggest props maxHeight 1`] = `
<EuiSuggest
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  maxHeight="50vh"
  suggestions={
    Array [
      Object {
        "description": "Description",
        "label": "Field sample",
        "type": Object {
          "color": "tint4",
          "iconType": "kqlField",
        },
      },
      Object {
        "description": "Description",
        "label": "Value sample",
        "type": Object {
          "color": "tint0",
          "iconType": "kqlValue",
        },
      },
    ]
  }
>
  <EuiSelectable
    height="full"
    isPreFiltered={false}
    listProps={
      Object {
        "bordered": false,
        "isVirtualized": false,
        "onFocusBadge": false,
        "paddingSize": "none",
        "showIcons": false,
        "textWrap": "wrap",
      }
    }
    onChange={[Function]}
    options={
      Array [
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Field sample",
            "type": Object {
              "color": "tint4",
              "iconType": "kqlField",
            },
          },
          "label": "Field sample",
          "truncate": undefined,
        },
        Object {
          "className": "euiSuggestItemOption",
          "data": Object {
            "description": "Description",
            "label": "Value sample",
            "type": Object {
              "color": "tint0",
              "iconType": "kqlValue",
            },
          },
          "label": "Value sample",
          "truncate": undefined,
        },
      ]
    }
    renderOption={[Function]}
    searchProps={
      Object {
        "append": undefined,
        "aria-describedby": "generated-id",
        "aria-label": "aria-label",
        "aria-labelledby": undefined,
        "className": "testClass1 testClass2",
        "data-test-subj": "test subject string",
        "fullWidth": true,
        "id": undefined,
        "isLoading": false,
        "onBlur": [Function],
        "onChange": [Function],
        "onFocus": [Function],
        "onInput": [Function],
      }
    }
    searchable={true}
    singleSelection={true}
  >
    <div
      className="euiSelectable euiSelectable-fullHeight"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <EuiInputPopover
        anchorPosition="downLeft"
        attachToAnchor={true}
        closePopover={[Function]}
        disableFocusTrap={true}
        display="block"
        fullWidth={true}
        input={
          <React.Fragment>
            <EuiI18n
              default="Filter options"
              token="euiSelectable.placeholderName"
            >
              [Function]
            </EuiI18n>
          </React.Fragment>
        }
        isOpen={false}
        panelPaddingSize="none"
        panelProps={
          Object {
            "aria-live": undefined,
            "aria-modal": false,
            "role": undefined,
          }
        }
        panelRef={[Function]}
      >
        <EuiPopover
          anchorPosition="downLeft"
          attachToAnchor={true}
          button={
            <EuiResizeObserver
              onResize={[Function]}
            >
              [Function]
            </EuiResizeObserver>
          }
          buttonRef={[Function]}
          closePopover={[Function]}
          css="unknown styles"
          display="block"
          isOpen={false}
          ownFocus={false}
          panelPaddingSize="none"
          panelProps={
            Object {
              "aria-live": undefined,
              "aria-modal": false,
              "role": undefined,
            }
          }
          panelRef={[Function]}
        >
          <Insertion
            cache={
              Object {
                "insert": [Function],
                "inserted": Object {
                  "192zz00-euiLoadingSpinner-m": true,
                  "1k1aqtq-EuiPopover": true,
                  "1sycd0p-euiPopover-EuiPopover-EuiInputPopover": true,
                  "6qkby-EuiInputPopover": true,
                  "animation-c24ia8": true,
                },
                "key": "css",
                "nonce": undefined,
                "registered": Object {
                  "css-6qkby-EuiInputPopover": ";label:EuiInputPopover;",
                },
                "sheet": StyleSheet {
                  "_alreadyInsertedOrderInsensitiveRule": true,
                  "_insertTag": [Function],
                  "before": null,
                  "container": <head>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-6qkby-EuiInputPopover{}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1k1aqtq-EuiPopover{display:block;}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>
                  </head>,
                  "ctr": 7,
                  "insertionPoint": undefined,
                  "isSpeedy": false,
                  "key": "css",
                  "nonce": undefined,
                  "prepend": undefined,
                  "tags": Array [
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-6qkby-EuiInputPopover{}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-1k1aqtq-EuiPopover{display:block;}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                    </style>,
                  ],
                },
              }
            }
            isStringTag={false}
            serialized={
              Object {
                "map": undefined,
                "name": "6qkby-EuiInputPopover",
                "next": undefined,
                "styles": ";label:EuiInputPopover;",
                "toString": [Function],
              }
            }
          />
          <EuiPopover
            anchorPosition="downLeft"
            attachToAnchor={true}
            button={
              <EuiResizeObserver
                onResize={[Function]}
              >
                [Function]
              </EuiResizeObserver>
            }
            buttonRef={[Function]}
            className="euiInputPopover css-6qkby-EuiInputPopover"
            closePopover={[Function]}
            display="block"
            hasArrow={true}
            isOpen={false}
            ownFocus={false}
            panelPaddingSize="none"
            panelProps={
              Object {
                "aria-live": undefined,
                "aria-modal": false,
                "role": undefined,
              }
            }
            panelRef={[Function]}
          >
            <EuiOutsideClickDetector
              onOutsideClick={[Function]}
            >
              <div
                css="unknown styles"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <Insertion
                  cache={
                    Object {
                      "insert": [Function],
                      "inserted": Object {
                        "192zz00-euiLoadingSpinner-m": true,
                        "1k1aqtq-EuiPopover": true,
                        "1sycd0p-euiPopover-EuiPopover-EuiInputPopover": true,
                        "6qkby-EuiInputPopover": true,
                        "animation-c24ia8": true,
                      },
                      "key": "css",
                      "nonce": undefined,
                      "registered": Object {
                        "css-6qkby-EuiInputPopover": ";label:EuiInputPopover;",
                      },
                      "sheet": StyleSheet {
                        "_alreadyInsertedOrderInsensitiveRule": true,
                        "_insertTag": [Function],
                        "before": null,
                        "container": <head>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-6qkby-EuiInputPopover{}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1k1aqtq-EuiPopover{display:block;}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>
                        </head>,
                        "ctr": 7,
                        "insertionPoint": undefined,
                        "isSpeedy": false,
                        "key": "css",
                        "nonce": undefined,
                        "prepend": undefined,
                        "tags": Array [
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-6qkby-EuiInputPopover{}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-1k1aqtq-EuiPopover{display:block;}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                          <style
                            data-emotion="css"
                            data-s=""
                          >
                            
                            @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                          </style>,
                        ],
                      },
                    }
                  }
                  isStringTag={true}
                  serialized={
                    Object {
                      "map": undefined,
                      "name": "1sycd0p-euiPopover-EuiPopover-EuiInputPopover",
                      "next": undefined,
                      "styles": "position:relative;vertical-align:middle;max-inline-size: 100%;;;label:euiPopover;;;display: block;label:EuiPopover;;;;label:EuiInputPopover;;",
                      "toString": [Function],
                    }
                  }
                />
                <div
                  className="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    css="unknown styles"
                  >
                    <Insertion
                      cache={
                        Object {
                          "insert": [Function],
                          "inserted": Object {
                            "192zz00-euiLoadingSpinner-m": true,
                            "1k1aqtq-EuiPopover": true,
                            "1sycd0p-euiPopover-EuiPopover-EuiInputPopover": true,
                            "6qkby-EuiInputPopover": true,
                            "animation-c24ia8": true,
                          },
                          "key": "css",
                          "nonce": undefined,
                          "registered": Object {
                            "css-6qkby-EuiInputPopover": ";label:EuiInputPopover;",
                          },
                          "sheet": StyleSheet {
                            "_alreadyInsertedOrderInsensitiveRule": true,
                            "_insertTag": [Function],
                            "before": null,
                            "container": <head>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-6qkby-EuiInputPopover{}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1k1aqtq-EuiPopover{display:block;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>
                            </head>,
                            "ctr": 7,
                            "insertionPoint": undefined,
                            "isSpeedy": false,
                            "key": "css",
                            "nonce": undefined,
                            "prepend": undefined,
                            "tags": Array [
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-6qkby-EuiInputPopover{}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover{position:relative;vertical-align:middle;max-inline-size:100%;display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-1k1aqtq-EuiPopover{display:block;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-192zz00-euiLoadingSpinner-m{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;display:inline-block;border-radius:50%;border:2px solid #D3DAE6;border-color:#07C #D3DAE6 #D3DAE6 #D3DAE6;width:16px;height:16px;border-width:calc(1px * 1.5);}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @media screen and (prefers-reduced-motion: no-preference){.css-192zz00-euiLoadingSpinner-m{-webkit-animation:animation-c24ia8 0.6s infinite linear;animation:animation-c24ia8 0.6s infinite linear;}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @-webkit-keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                @keyframes animation-c24ia8{from{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);transform:rotate(359deg);}}
                              </style>,
                            ],
                          },
                        }
                      }
                      isStringTag={true}
                      serialized={
                        Object {
                          "map": undefined,
                          "name": "1k1aqtq-EuiPopover",
                          "next": undefined,
                          "styles": "display: block;label:EuiPopover;;;",
                          "toString": [Function],
                        }
                      }
                    />
                    <div
                      className="euiPopover__anchor css-1k1aqtq-EuiPopover"
                    >
                      <EuiResizeObserver
                        onResize={[Function]}
                      >
                        <div>
                          <EuiI18n
                            default="Filter options"
                            token="euiSelectable.placeholderName"
                          >
                            <EuiSelectableSearch
                              aria-activedescendant=""
                              aria-label="aria-label"
                              className="testClass1 testClass2"
                              data-test-subj="test subject string"
                              fullWidth={true}
                              inputRef={[Function]}
                              isLoading={false}
                              isPreFiltered={false}
                              key="listSearch"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onInput={[Function]}
                              options={
                                Array [
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Field sample",
                                      "type": Object {
                                        "color": "tint4",
                                        "iconType": "kqlField",
                                      },
                                    },
                                    "label": "Field sample",
                                    "truncate": undefined,
                                  },
                                  Object {
                                    "className": "euiSuggestItemOption",
                                    "data": Object {
                                      "description": "Description",
                                      "label": "Value sample",
                                      "type": Object {
                                        "color": "tint0",
                                        "iconType": "kqlValue",
                                      },
                                    },
                                    "label": "Value sample",
                                    "truncate": undefined,
                                  },
                                ]
                              }
                              placeholder="Filter options"
                              value=""
                            >
                              <EuiFieldSearch
                                aria-activedescendant=""
                                aria-haspopup="listbox"
                                aria-label="aria-label"
                                autoComplete="off"
                                className="euiSelectableSearch testClass1 testClass2"
                                compressed={false}
                                data-test-subj="test subject string"
                                fullWidth={true}
                                incremental={true}
                                inputRef={[Function]}
                                isClearable={true}
                                isLoading={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onInput={[Function]}
                                placeholder="Filter options"
                                value=""
                              >
                                <EuiFormControlLayout
                                  compressed={false}
                                  fullWidth={true}
                                  icon="search"
                                  isLoading={false}
                                >
                                  <div
                                    className="euiFormControlLayout euiFormControlLayout--fullWidth"
                                  >
                                    <div
                                      className="euiFormControlLayout__childrenWrapper"
                                    >
                                      <EuiValidatableControl>
                                        <input
                                          aria-activedescendant=""
                                          aria-haspopup="listbox"
                                          aria-label="aria-label"
                                          autoComplete="off"
                                          className="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                                          data-test-subj="test subject string"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          onInput={[Function]}
                                          onKeyUp={[Function]}
                                          placeholder="Filter options"
                                          type="search"
                                          value=""
                                        />
                                      </EuiValidatableControl>
                                      <EuiFormControlLayoutIcons
                                        compressed={false}
                                        icon="search"
                                        isLoading={false}
                                      >
                                        <div
                                          className="euiFormControlLayoutIcons"
                                        >
                                          <EuiFormControlLayoutCustomIcon
                                            size="m"
                                            type="search"
                                          >
                                            <span
                                              className="euiFormControlLayoutCustomIcon"
                                            >
                                              <EuiIcon
                                                aria-hidden="true"
                                                className="euiFormControlLayoutCustomIcon__icon"
                                                size="m"
                                                type="search"
                                              >
                                                <span
                                                  aria-hidden="true"
                                                  className="euiFormControlLayoutCustomIcon__icon"
                                                  data-euiicon-type="search"
                                                  size="m"
                                                />
                                              </EuiIcon>
                                            </span>
                                          </EuiFormControlLayoutCustomIcon>
                                        </div>
                                      </EuiFormControlLayoutIcons>
                                    </div>
                                  </div>
                                </EuiFormControlLayout>
                              </EuiFieldSearch>
                            </EuiSelectableSearch>
                          </EuiI18n>
                        </div>
                      </EuiResizeObserver>
                    </div>
                  </div>
                </div>
              </div>
            </EuiOutsideClickDetector>
          </EuiPopover>
        </EuiPopover>
      </EuiInputPopover>
    </div>
  </EuiSelectable>
  <EuiScreenReaderOnly>
    <p
      className="euiScreenReaderOnly"
      id="generated-id"
    >
      State: unchanged.
    </p>
  </EuiScreenReaderOnly>
</EuiSuggest>
`;

exports[`EuiSuggest props options common 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props options standard 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props remaining EuiFieldSearch props are spread to the search input 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1gt8vry-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-invalid="true"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFormControlLayout--2icons euiFieldSearch--compressed euiFieldSearch-isClearable euiFieldSearch-isInvalid euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                id="testId"
                name="testName"
                placeholder="Start typing"
                type="search"
                value="Controlled value"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <button
                  aria-label="Clear input"
                  class="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                  data-test-subj="clearSearchButton"
                  type="button"
                >
                  <span
                    class="euiFormControlLayoutClearButton__icon"
                    data-euiicon-type="cross"
                  />
                </button>
                <span
                  color="danger"
                  data-euiicon-type="alert"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="testId_generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props status status: loading is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner css-192zz00-euiLoadingSpinner-m"
                  role="progressbar"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: loading.
  </p>,
]
`;

exports[`EuiSuggest props status status: saved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="success"
                data-euiicon-type="checkInCircleFilled"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: saved.
  </p>,
]
`;

exports[`EuiSuggest props status status: unchanged is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props status status: unsaved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="accent"
                data-euiicon-type="dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unsaved.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: loading is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isLoading euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner css-192zz00-euiLoadingSpinner-m"
                  role="progressbar"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: loading.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: saved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="success"
                data-euiicon-type="checkInCircleFilled"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: saved.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unchanged is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unchanged.
  </p>,
]
`;

exports[`EuiSuggest props tooltipContent tooltipContent for status: unsaved is rendered 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  >
    <div
      class="euiPopover euiInputPopover css-1sycd0p-euiPopover-EuiPopover-EuiInputPopover"
    >
      <div
        class="euiPopover__anchor css-1k1aqtq-EuiPopover"
      >
        <div>
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--group"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-activedescendant=""
                aria-haspopup="listbox"
                aria-label="aria-label"
                autocomplete="off"
                class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--inGroup euiSelectableSearch testClass1 testClass2"
                data-test-subj="test subject string"
                placeholder="Filter options"
                type="search"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="search"
                  />
                </span>
              </div>
            </div>
            <span
              class="euiToolTipAnchor"
            >
              <span
                class="euiSuggestInput__statusIcon"
                color="accent"
                data-euiicon-type="dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p
    class="euiScreenReaderOnly"
    id="generated-id"
  >
    State: unsaved.
  </p>,
]
`;
